@@ -1,3 +1,9 @@
+49.rc - DEVEL
+==========================
+
+- Restore long press behavior to v48
+- Fix fixed cells opening the picker
+
 49.beta - August 1, 2025
 ==========================
 
